--- a/package.json
+++ b/package.json
@@ -12,11 +12,30 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.10.0",
+    "file-loader": "^6.2.0",
+    "html-loader": "^5.0.0",
+    "html-webpack-plugin": "^5.6.0",
+    "raw-loader": "^4.0.2",
+    "three-gltf-loader": "^1.111.0",
+    "ts-loader": "^9.5.1",
     "tsup": "^8.0.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vite": "^5.1.1",
+    "webpack": "^5.90.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "peerDependencies": {
     "@types/node": "^20.11.17",
     "typescript": "^5.3.3"
+  },
+  "repository": {
+    "url": "https://github.com/GrzeskoByte/ThreeJS-fbx-visualizer"
+  },
+  "dependencies": {
+    "@types/three": "^0.161.2",
+    "three": "^0.161.0"
   }
 }
